--- a/power/src/app/fragebogen/editor/answers/answers.component.html
+++ b/power/src/app/fragebogen/editor/answers/answers.component.html
@@ -29,7 +29,7 @@
                        class="sr-only"
                        i18n>Anzeigetext</label>
                 <input type="text"
-                       class="form-control m-0"
+                       class="form-control"
                        [(ngModel)]="item.text.default"
                        id="answer-text-{{ i }}{{ uniqId }}"
                        name="answer-text-{{ i }}{{ uniqId }}"
