--- a/power/src/app/fragebogen/editor/conditions/conditions.component.html
+++ b/power/src/app/fragebogen/editor/conditions/conditions.component.html
@@ -1,6 +1,6 @@
 <div *ngFor="let item of struct; index as i">
-    <div class="form-row m-0 mb-2">
-        <div class="form-group col-2 m-0 pl-0">
+    <div class="form-row">
+        <div class="form-group col-2 mb-0">
             <label for="conditionCondition{{ i }}{{ uniqId }}"
                    class="sr-only"
                    i18n>Verknüpfung*</label>
@@ -19,7 +19,7 @@
             </select>
         </div>
 
-        <div class="form-group col-4 m-0">
+        <div class="form-group col-4 mb-0">
             <label for="conditionQuestion{{ i }}{{ uniqId }}"
                    class="sr-only"
                    i18n>Formularfeld*</label>
@@ -37,7 +37,7 @@
                    required>
         </div>
 
-        <div class="form-group col-2 m-0">
+        <div class="form-group col-2 mb-0">
             <label for="conditionOperator{{ i }}{{ uniqId }}"
                    class="sr-only"
                    i18n>Operator*</label>
@@ -71,7 +71,7 @@
             </select>
         </div>
 
-        <div class="form-group col-4 m-0 pr-0"
+        <div class="form-group col-4 mb-0"
              *ngIf="!(item.operator === 'empty' || item.operator === 'notempty')">
             <label for="conditionValueA{{ i }}{{ uniqId }}"
                    class="sr-only"
@@ -106,6 +106,7 @@
             </select>
         </div>
     </div>
+    <hr>
 </div>
 
 <datalist id="{{ 'conditionlist-' + uniqId }}">
