--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -1,18 +1,18 @@
 <div class="container-xl border-left border-right">
-    <div class="row pl-lg-5 pt-lg-5 pr-lg-0 pb-lg-0 p-2"
-        tabindex="0" 
-        aria-label="Sie befinden sich im Absatz für BORIS.NI."
-        i18n-aria-label>
+    <div class="row pl-lg-5 pt-lg-5 pr-lg-0 pb-lg-0 p-2">
         <div class="col-lg-6 p-0">
             <div class= "boris-img col-lg-12 p-0" ></div>
         </div>
         <div class="col-lg-6 px-0 pl-lg-5 pt-2 pt-lg-0">
             <div class="content col-lg-12 text-dark p-5 rounded-left">
                 <a class="h2 btn-link text-dark font-weight-bold"
+                   id="Boris.NI"
                    [routerLink]="['/bodenrichtwerte']"
-                   i18n>BORIS.NI</a>
+                   aria-labelledby="Boris.NI BorisSub BorisContext"
+                   i18n
+                   i18n-aria-labelledby>BORIS.NI</a>   
                 <p class="h6"
-                   tabindex="0"
+                   id="BorisSub"
                    i18n>{{ 'Bodenrichtwertinformationssystem Niedersachsen' | hyphenate }}</p>
                 <p class="lead text-justify"
                    tabindex="0"
@@ -22,17 +22,17 @@
             </div>
         </div>
     </div>
-    <div class="row pr-lg-5 pt-lg-5 pl-lg-0 pb-lg-0 p-2"
-        tabindex="0" 
-        aria-label="Sie befinden sich im Absatz für NIPIX."
-        i18n-aria-label>
+    <div class="row pr-lg-5 pt-lg-5 pl-lg-0 pb-lg-0 p-2">
         <div class="col-lg-9 p-0 pr-lg-5 pt-2 pt-lg-0">
             <div class="content col-lg-12 text-dark p-5 rounded-right">
                 <a class="h2 btn-link text-dark font-weight-bold"
+                   id="nipix"
                    [routerLink]="['/immobilienpreisindex']"
-                   i18n>NIPIX</a>
+                   aria-labelledby="nipix nipixSub"
+                   i18n
+                   i18n-aria-labelledby>NIPIX</a>
                 <p class="h6"
-                   tabindex="0"
+                   id="nipixSub"
                    i18n>{{ 'Niedersächsischer Immobilienpreisindex' | hyphenate }}</p>
                 <p class="lead text-justify"
                    tabindex="0"
@@ -46,17 +46,14 @@
             <div class="nipix-img col-lg-12 p-0"></div>
         </div>
     </div>
-    <div class="row pl-lg-5 pt-lg-5 pr-lg-0 pb-lg-0 p-2"
-         tabindex="0" 
-         aria-label="Sie befinden sich im Absatz für den Zugang zu den Online-Formularen."
-         i18n-aria-label>
+    <div class="row pl-lg-5 pt-lg-5 pr-lg-0 pb-lg-0 p-2">
         <div class="col-lg-6 pr-0 pl-lg-0 pl-0">
             <div class="form-img col-lg-12 p-0"></div>
         </div>
         <div class="col-lg-6 pr-lg-0 pr-0 pl-lg-5 pl-0 pt-2 pt-lg-0">
             <div class="content col-lg-12 text-dark p-5 rounded-left">
                 <a class="h2 btn-link text-dark font-weight-bold"
-                   [routerLink]="['/immobilienpreisindex']"
+                   [routerLink]="['/forms']"
                    tabindex="0"
                    i18n>Online Formulare</a>
                 <p class="lead text-justify pt-3"
@@ -66,19 +63,18 @@
                    'Wenn Sie eine PIN für ein Formular erhalten haben, können Sie diesen direkt über die PIN abrufen und ausfüllen.' | hyphenate }}
                 </p>
                 <form #pinFormular="ngForm"
-                      i18n-aria-label
-                      aria-label="Eingabefeld für eine PIN, um zum entsprechenden Formular zu gelangen."
                       (ngSubmit)="submitPIN(pin.value)"
                       class="form-inline">
                     <label class="control-label sr-only"
-                           for="pin"
-                           i18n>Formular PIN</label>
+                           id="formPIN"
+                           i18n>Eingabefeld für eine Formular PIN, um zum entsprechenden Formular zu gelangen.</label>
                     <input type="text"
                            class="form-control mr-2 w-mobile"
                            id="pin"
                            i18n-placeholder
                            placeholder="Formular PIN"
-                           aria-hidden="true"
+                           aria-labelledby="formPIN"
+                           aria-placeholder=""
                            #pin>
 
                     <button type="submit"
@@ -106,12 +102,10 @@
     </div>
 </div>
 <div class="container-xl mt-5">
-    <div class="row jumbotron mb-0"
-         tabindex="0" 
-         aria-label="Sie befinden sich im Absatz Neuigkeiten."
-         i18n-aria-label>
+    <div class="row jumbotron mb-0">
         <div class="col-lg-12">
-            <h2>
+            <h2 id=news 
+                aria-label="News">
                 <svg width="1em"
                      height="1em"
                      viewBox="0 0 16 16"
@@ -126,16 +120,18 @@
                           d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8zm0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z" />
                 </svg>
                 <span class="ml-1"
+                      aria-labelledby="news"
+                      tabindex="0"
                       i18n>News</span>
             </h2>
             <hr class="my-4">
         </div>
         <div class="col-lg-6">
-            <h5>{{ 'Immobilienmarktbericht 2020' | hyphenate }} </h5>
+            <h5 tabindex="0">{{ 'Immobilienmarktbericht 2020' | hyphenate }} </h5>
             <a>{{ 'Eine Dekade steigender Preise in Niedersachsen...' | hyphenate }}</a>
         </div>
         <div class="col-lg-6">
-            <h5>{{ 'Bodenrichtwerte 2021' | hyphenate }} </h5>
+            <h5 tabindex="0">{{ 'Bodenrichtwerte 2021' | hyphenate }} </h5>
             <a>{{ 'Die neuen Bodenrichtwerte sind jetzt verfügbar...' | hyphenate }}</a>
         </div>
     </div>
