--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -25,10 +25,6 @@
                 style="border: none; padding-right: 0;"
                 type="button"
                 (click)="isCollapsed = !isCollapsed"
-                [attr.aria-expanded]="!isCollapsed"
-                [class.active]="!isCollapsed"
-                aria-controls="navbarToggler"
-                i18n-aria-label
                 aria-label="Navigation umschalten">
             <span class="navbar-toggler-icon"
                   aria-hidden="true"></span>
@@ -37,10 +33,8 @@
         </button>
 
         <div class="collapse navbar-collapse"
-             style="z-index: 2000;"
              id="navbarToggler"
-             [collapse]="isCollapsed"
-             [isAnimated]="true">
+             [ngbCollapse]="isCollapsed">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"
                     *ngIf="config.modules.includes('bodenrichtwerte')">
@@ -140,7 +134,9 @@
         </div>
     </nav>
 
-    <router-outlet></router-outlet>
+    <main>
+        <router-outlet></router-outlet>
+    </main>
 
     <div class="container-fluid">
         <footer class="pt-4 my-md-5 pt-md-5 border-top w-100 m-0 overflow-hidden">
