--- a/power/src/app/static/feedback/feedback.component.html
+++ b/power/src/app/static/feedback/feedback.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-    <div class="row">
+    <div class="row"
+         tabindex="0">
         <div class="col-sm text-center pt-3">
             <h2 i18n="Header">Feedback</h2>
             <p class="lead mb-3"
@@ -8,7 +9,8 @@
                 bei Problemen orientieren Sie sich bitte an den folgenden Stichpunkten:</p>
         </div>
     </div>
-    <div class="row justify-content-center">
+    <div class="row justify-content-center"
+         tabindex="0">
         <div class="col-12 col-sm-12 col-md-8 col-xl-5 text-left">
             <ul>
                 <li i18n>Genaue Beschreibung des Fehlers</li>
@@ -26,12 +28,20 @@
             <p class="text-muted"
                i18n>Der Empfänger ist bereits ausgefüllt</p>
             <a type="button"
+               role="button"
+               id="feedbackButton"
                class="btn btn-primary"
                href="mailto:{{ mail }}"
+               aria-label= "Dieser Button öffnet Ihr E-Mail-Programm. Der Empfänger ist bereits ausgefüllt."
+               aria-labelledby="feedbackButton feedbackManually"
+               i18n-aria-label
                i18n-title="Feedback geben"
                title="Feedback geben"
                i18n>Feedback</a>
             <p class="mt-3"
+               id="feedbackManually"
+               aria-label="Falls sich Ihr E-Mail-Programm nicht öffnet, senden Sie die E-Mail bitte an nachfolgenden E-Mail Adresse."
+               i18n-aria-label
                i18n>Falls sich Ihr E-Mail-Programm nicht öffnet, senden Sie die E-Mail bitte an:</p>
             <code class="mr-2">{{ mail }}</code>
             <button type="button"
